--- a/Application/Resources/SharedResource.vi-VN.resx
+++ b/Application/Resources/SharedResource.vi-VN.resx
@@ -138,4 +138,7 @@
   <data name="redis_error" xml:space="preserve">
     <value>Không thể kết nối đến Redis {0}</value>
   </data>
+  <data name="seed_data_error" xml:space="preserve">
+    <value>Lỗi khi tạo dữ liệu</value>
+  </data>
 </root>
