--- a/Profile.Application/Resources/ProfileSharedResource.vi-VN.resx
+++ b/Profile.Application/Resources/ProfileSharedResource.vi-VN.resx
@@ -120,4 +120,31 @@
   <data name="Hello" xml:space="preserve">
     <value>Xin chao {0}</value>
   </data>
+  <data name="null_first_name" xml:space="preserve">
+    <value>Tên là bắt buộc</value>
+  </data>
+  <data name="size_first_name" xml:space="preserve">
+    <value>Tên phải có ít nhất 2 ký tự và tối đa 50 ký tự</value>
+  </data>
+  <data name="null_last_name" xml:space="preserve">
+    <value>Họ là bắt buộc</value>
+  </data>
+  <data name="size_last_name" xml:space="preserve">
+    <value>Họ phải có ít nhất 2 ký tự và tối đa 50 ký tự</value>
+  </data>
+  <data name="null_username" xml:space="preserve">
+    <value>Tên người dùng là bắt buộc</value>
+  </data>
+  <data name="size_username" xml:space="preserve">
+    <value>Tên người dùng phải có ít nhất 2 ký tự và tối đa 50 ký tự</value>
+  </data>
+  <data name="invalid_mobile_number" xml:space="preserve">
+    <value>Số điện thoại không hợp lệ</value>
+  </data>
+  <data name="null_mobile_number" xml:space="preserve">
+    <value>Số điện thoại là bắt buộc</value>
+  </data>
+  <data name="profile_updated_success" xml:space="preserve">
+    <value>Cập nhật thành công cho người dùng: {0}</value>
+  </data>
 </root>
