--- a/Application/Resources/SharedResource.vi-VN.resx
+++ b/Application/Resources/SharedResource.vi-VN.resx
@@ -141,4 +141,7 @@
   <data name="seed_data_error" xml:space="preserve">
     <value>Lỗi khi tạo dữ liệu</value>
   </data>
+  <data name="validation_error" xml:space="preserve">
+    <value>Đầu vào không hợp lệ</value>
+  </data>
 </root>
