--- a/File.Application/Resources/FileSharedResource.vi-VN.resx
+++ b/File.Application/Resources/FileSharedResource.vi-VN.resx
@@ -117,7 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="bucket_creation_failed" xml:space="preserve">
+    <value>Tạo bucket {0} thất bại</value>
+  </data>
+  <data name="can_not_delete_file" xml:space="preserve">
+    <value>Không thể xóa tệp</value>
+  </data>
+  <data name="can_not_store_file" xml:space="preserve">
+    <value>Không thể lưu trữ tệp</value>
+  </data>
   <data name="Hello" xml:space="preserve">
     <value>Xin chao {0}</value>
+  </data>
+  <data name="null_file_name" xml:space="preserve">
+    <value>Tên tệp không để trống</value>
+  </data>
+  <data name="null_thumbnail_width" xml:space="preserve">
+    <value />
   </data>
 </root>
