--- a/Notification.Application/Resources/NotificationSharedResource.resx
+++ b/Notification.Application/Resources/NotificationSharedResource.resx
@@ -118,34 +118,33 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ProfileFollowNotification.Title" xml:space="preserve">
-    <value />
+    <value>New follower</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="ProfileFollowNotification.Content" type="System.Resources.ResXNullRef, System.Windows.Forms">
-    <value />
+  <data name="ProfileFollowNotification.Content" xml:space="preserve">
+    <value>{0} followed you</value>
   </data>
   <data name="TaggedInPostNotification.Title" xml:space="preserve">
-    <value />
+    <value>Post: {0}</value>
   </data>
   <data name="TaggedInPostNotification.Content" xml:space="preserve">
-    <value />
+    <value>{0} tagged you in a post</value>
   </data>
   <data name="TaggedInCommentNotification.Title" xml:space="preserve">
-    <value />
+    <value>Post: {0}</value>
   </data>
   <data name="TaggedInCommentNotification.Content" xml:space="preserve">
-    <value />
+    <value>{0} tagged you in a comment</value>
   </data>
   <data name="ReplyCommentNotification.Title" xml:space="preserve">
-    <value />
+    <value>Post: {0}</value>
   </data>
   <data name="ReplyCommentNotification.Content" xml:space="preserve">
-    <value />
+    <value>{0} replied to your comment</value>
   </data>
   <data name="FriendInvitationNotification.Title" xml:space="preserve">
-    <value />
+    <value>New friend invitation</value>
   </data>
   <data name="FriendInvitationNotification.Content" xml:space="preserve">
-    <value />
+    <value>{0} sent you a friend invitation</value>
   </data>
 </root>
