--- a/Application/Resources/SharedResource.resx
+++ b/Application/Resources/SharedResource.resx
@@ -147,4 +147,7 @@
   <data name="Required.Birthdate" xml:space="preserve">
     <value>Birthdate is required</value>
   </data>
+  <data name="ResourceNotFound.Account" xml:space="preserve">
+    <value>Account not found</value>
+  </data>
 </root>
