feat: sign-up & send mail & verify by code

--- a/Identity.Application/Resources/IdentitySharedResource.en-US.resx
+++ b/Identity.Application/Resources/IdentitySharedResource.en-US.resx
@@ -231,4 +231,7 @@
   <data name="ResourceNotFound.Account" xml:space="preserve">
     <value>Account not found</value>
   </data>
+  <data name="ValidationError.InvalidBirthdate" xml:space="preserve">
+    <value>Must older than 18 years old</value>
+  </data>
 </root>
